# iron-coder-25-26

./: .gitignore  Cargo.toml  README.md  build_wasm_on_windows.bat  first-run.bat  first-run.sh  index.html
Redist/common_hal_interface/: Cargo.toml
Redist/common_hal_interface/src/: arduino.rs  esp.rs  lib.rs  rp2040.rs  rp2040_adafruit_feather.rs  rp2040_pico.rs  stm32f4.rs
assets/auxiliary/: user_testing_notes.txt
example-projects/ArduinoUno_blink_i2c/: .ironcoder.toml  Cargo.toml  avr-atmega328p.json
example-projects/ArduinoUno_blink_i2c/.cargo/: config.toml
example-projects/ArduinoUno_blink_i2c/src/: main.rs
example-projects/ESP32C6_blink_i2c/: .ironcoder.toml  Cargo.toml
example-projects/ESP32C6_blink_i2c/.cargo/: config.toml
example-projects/ESP32C6_blink_i2c/src/: main.rs
iron-coder-boards-legacy/Sparkfun/MicroMod-RP2040/: micromod_rp2040.toml
iron-coder-boards-legacy/Sparkfun/MicroMod-RP2040/template/common_hal_interface/src/: arduino.rs
iron-coder-boards/Adafruit/FeatherWing_OLED_128x64/: featherwing_oled_128x64.toml
iron-coder-boards/Adafruit/FeatherWing_propmaker/: prop-maker.toml
iron-coder-boards/Adafruit/FeatherWing_propmaker/bsp/src/: lib.rs
iron-coder-boards/Adafruit/Feather_RP2040/: feather_rp2040.toml
iron-coder-boards/Adafruit/Feather_RP2040/template/: Cargo.toml
iron-coder-boards/Adafruit/Feather_RP2040/template/common_hal_interface/src/: esp.rs  rp2040.rs
iron-coder-boards/Adafruit/Feather_RP2040/template/src/: main.rs
iron-coder-boards/Adafruit/Feather_nRF52832/: feather_nRF52832.toml
iron-coder-boards/Adafruit/NeoPixel/: neopixel_8x8.toml
iron-coder-boards/Adafruit/PiTTF_32_cap_touch/: pitft32-cap-touch.toml
iron-coder-boards/Arduino/Arduino_Uno/: arduino_uno.toml
iron-coder-boards/Arduino/Arduino_Uno/template/: Cargo.toml  Makefile.toml  README.md  avr-atmega328p.json  cargo-generate.toml
iron-coder-boards/Arduino/Arduino_Uno/template/.cargo/: config.toml
iron-coder-boards/Arduino/Arduino_Uno/template/common_hal_interface/: Cargo.toml  README.md
iron-coder-boards/Arduino/Arduino_Uno/template/common_hal_interface/src/: arduino.rs  esp.rs  lib.rs  rp2040.rs
iron-coder-boards/Arduino/Arduino_Uno/template/src/: main.rs
iron-coder-boards/ESP/ESP32-C6-DevKitC-1/: ESP32-C6-DevKitM-1.toml
iron-coder-boards/ESP/ESP32-C6-DevKitC-1/template/: Cargo.toml  cargo-generate.toml
iron-coder-boards/ESP/ESP32-C6-DevKitC-1/template/.cargo/: config.toml
iron-coder-boards/ESP/ESP32-C6-DevKitC-1/template/src/: main.rs
iron-coder-boards/Generic/I2C/: i2c.toml
iron-coder-boards/Generic/LED/: led.toml
iron-coder-boards/Generic/PushButton/: pushbutton.toml
iron-coder-boards/Generic/SPI/: spi.toml
iron-coder-boards/Sparkfun/MicroMod-RP2040/template/: Cargo.toml
iron-coder-boards/Sparkfun/MicroMod-RP2040/template/common_hal_interface/: README.md
iron-coder-boards/Sparkfun/MicroMod-RP2040/template/common_hal_interface/src/: rp2040.rs  stm32f4.rs
iron-coder-boards/common_hal_interface/: Cargo.toml
iron-coder-boards/common_hal_interface/src/: arduino.rs  esp.rs  rp2040.rs  stm32f4.rs
resources/: keybindings.json  keybindings_default.json
resources/colorschemes/: 0.toml  10.toml  11.toml  12.toml  13.toml  14.toml  16.toml  17.toml  2.toml  21.toml  23.toml  24.toml  25.toml  26.toml  29.toml  3.toml  30.toml  31.toml  32.toml  35.toml  36.toml  4.toml  42.toml  44.toml  45.toml  46.toml  47.toml  48.toml  50.toml  52.toml  53.toml  54.toml  55.toml  57.toml  6.toml  60.toml  62.toml  63.toml  64.toml  65.toml  (+48 more)
resources/colorschemes_unnamed/: 1.toml  15.toml  18.toml  19.toml  20.toml  22.toml  27.toml  28.toml  33.toml  34.toml  37.toml  38.toml  39.toml  40.toml  41.toml  43.toml  49.toml  5.toml  51.toml  53.toml  56.toml  58.toml  59.toml  61.toml  70.toml  72.toml  75.toml  77.toml  78.toml  79.toml  8.toml  80.toml  81.toml  82.toml  9.toml
src/: colorschemes.rs  docking.rs  keybinding.rs  lib.rs  main.rs  test.rs
src/app/: canvas_board.rs  canvas_connection.rs  canvas_element.rs  canvas_protocol.rs  colorschemes.rs  command.rs  connection_wizard.rs  icons.rs  ide_settings.rs  keybinding.rs  mod.rs  shared_state.rs  syntax_highlighting.rs  window.rs
src/app/tabs/: base_tab.rs  board_info_tab.rs  canvas_tab.rs  debug_tab.rs  dependency_checker_tab.rs  file_explorer_tab.rs  file_tab.rs  mod.rs  settings_tab.rs  terminal_tab.rs
src/board/: display.rs  mod.rs  pinout.rs  svg_reader.rs
src/dependencies/: checker.rs
src/project/: display.rs  mod.rs  project.rs  system.rs  toolchain.rs
