[profile.release]
debug = true
incremental = true
opt-level = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 1


[package]
name = "egui_dock_testing"
version = "0.1.0"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]



[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_dock = "*"
emath = "*"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"

# tracing = "0.1.37"
# tracing-subscriber = "0.3"
log = "0.4.27"
# # You only need serde if you want app persistence:
egui_extras = { version = "0.31.1", features = ["image", "all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png", "gif"] }
# syntect = "5.0.0"
rfd= "*"
rand = "*"
# fs_extra = "1.3.0"
# duct = "0.13.6"
enum-iterator = "2.1.0"
# ra_ap_rust-analyzer = "0.0.220"
ra_ap_ide = "0.0.273"
syn = { version = "2.0.25", features = ["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.29"
proc-macro2 = "1.0.64"
prettyplease = "0.2.10"
# slotmap = "1.0.6"
# clap = { version = "4.3.19", features = ["derive"] }
usvg = "0.35.0"
# generate = "1.5.0"
# savefile-derive = "0.17.4"
# k_board = "1.2.2"
# git2 = "0.19.0"

# PLATFORM SPECIFIC REQUIREMENTS

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tracy-client = "0.18.0"
rfd = "*"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd = {version="*",default-features=false,features=["common-controls-v6"]}
web-sys={version="0.3.46",features = [
  'Document',
  'Window',
]}
wasm-bindgen-futures = "0.4.19"
winit = "0.29" 
futures = {version="0.3.10",features=["thread-pool"]}
getrandom = { version = "0.2.15", features = ["js"] }