[package]
name = "iron_coder"
version = "0.2.0"
edition = "2024"


[profile.release]
debug = true
incremental = true
opt-level = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 1


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
rfd = "*"
rand = "*"
egui = {version = "0.31.1", features = ["serde"]}
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_dock = "*"
emath = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
log = "0.4.27"
egui_extras = { version = "0.31.1", features = ["image", "all_loaders"] }
egui-dropdown = "0.13"

image = { version = "0.24.7", features = ["jpeg", "png", "gif"] }
syntect = "5.0.0"
enum-iterator = "2.1.0"
ra_ap_ide = "0.0.273"
syn = { version = "2.0.25", features = ["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.29"
proc-macro2 = "1.0.64"
prettyplease = "0.2.10"
usvg = "0.35.0"
duct = "0.13.6"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
notify = "8.2.0"
egui_term = "0.1.0"
which = "8.0.0"
