[package]
name = "common_hal_interface"
version = "1.0.16-alpha"
edition = "2021"
authors = [
    "jonathanlouis@ufl.edu",
    "jbryan2@ufl.edu",
    "evanpurutcuoglu@ufl.edu",
]
description = "A common interface between Rust HALs, for use in the Iron Coder IDE"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "hal", "macro", "compatibility"]
categories = ["embedded", "development-tools", "hardware-support", "rust-patterns", "no-std"]

[features]
default = []

# Base HAL features
rp2040 = []
arduino = []
stm32f4 = []
esp = []

# RP2040 BSP features (imply rp2040)
adafruit-feather-rp2040 = ["rp2040"]
adafruit-kb2040 = ["rp2040"]
adafruit-qt-py-rp2040 = ["rp2040"]
sparkfun-pro-micro-rp2040 = ["rp2040"]
rp-pico = ["rp2040"]

# Arduino board features (imply arduino)
arduino-uno = ["arduino"]
arduino-nano = ["arduino"]
arduino-mega2560 = ["arduino"]
arduino-leonardo = ["arduino"]
sparkfun-promicro = ["arduino"]
sparkfun-promini-3v3 = ["arduino"]
sparkfun-promini-5v = ["arduino"]
trinket = ["arduino"]
trinket-pro = ["arduino"]

[lib]
name = "common_hal_interface"
path = "src/lib.rs"
