[package]
edition      = "2021"
name         = "esp_test"
version      = "0.1.0"

# [[bin]]
# name = "esp_test"
# path = "./src/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable"] }
critical-section = "1.2.0"
esp-println = {version = "0.16.1", features = ["esp32c6", "log-04"]}
heapless = "0.9.2"
itoa = "1.0.15"
common_hal_interface = { version = "1.0.16-alpha", features= ["esp"]}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
