[package]
name = "common_hal_interface"
version = "1.0.0-alpha"
description = "A common interface between Rust HALs, for use in the Iron Coder IDE"
license = "MIT"
readme = "README.md"
authors = ["jonathanlouis@ufl.edu"]
categories = ["embedded", "development-tools", "hardware-support", "rust-patterns", "no-std"]
keywords = ["embedded", "hal", "macro", "compatibility"]
edition = "2024"


[features]
default = []
# Arduino features. They cannot specify features of arduino-hal directly but they can still be used as if the user specified the feature for arduino-hal, as long as both feature selections match. This may need to be left to the user, or it may be possible to configure it in the template for each board.
arduino = []
arduino-uno = ["arduino"]
arduino-mega2560 = ["arduino"]
arduino-leonardo = ["arduino"]
arduino-nano = ["arduino"]
sparkfun-promicro = ["arduino"]
sparkfun-promini-3v3 = ["arduino"]
sparkfun-promini-5v = ["arduino"]
trinket = ["arduino"]
trinket-pro = ["arduino"]

rp2040 = ["dep:rp2040-hal"]
stm32f4 = ["dep:stm32f4xx-hal"]
esp = ["dep:esp-hal"]

[dependencies]
rp2040-hal = { version = "0.10", optional = true }
stm32f4xx-hal = { version = "0.21", optional = true }
esp-hal = { version = "0.20", optional = true }


